--- a/wizard/new_event_wizard_view.xml
+++ b/wizard/new_event_wizard_view.xml
@@ -10,7 +10,7 @@
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="partner_ids" widget="many2manyattendee" placeholder="Select attendees..." context="{'force_email':True}" on_change="onchange_partner_ids(partner_ids)" class="oe_inline"/>
+                            <!--<field name="partner_ids" widget="many2manyattendee" placeholder="Select attendees..." context="{'force_email':True}" on_change="onchange_partner_ids(partner_ids)" class="oe_inline"/>-->
                         </group>
                         <group>
                             <field name="start_date"/>
@@ -18,7 +18,7 @@
                         </group>
                     </group>
                     <div style="text-align:left">
-                        <button name="create_event" string="Create" type="object" class="btn btn-primary" />
+                        <button name="create_event_from_wizard" string="Create" type="object" class="btn btn-primary" />
                         <button icon="gtk-cancel" special="cancel" string="Cancel" />
                     </div>
                 </form>
